--- a/less/about.less
+++ b/less/about.less
@@ -20,6 +20,7 @@
         margin: 2% 10% 3%;
     }
     img {
+        padding: 5%;
         @media @phone {
             align-self: start;
         }
