--- a/less/strain.less
+++ b/less/strain.less
@@ -4,7 +4,14 @@
             width: 15%;
         }
     }
+    @media @phone {
+        display: flex;
+        flex-direction: column;
+    }
     .strainSqrs {
+        padding: 2%;
+        display: flex;
+        justify-self: center;
         justify-content: center;
     }
     border-radius: 7px;
@@ -13,4 +20,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     padding: 2% 0%;
+    .detailsOnStrain {
+        padding: 2% 2% 2% 0;
+    }
 }
